remove time encoder check

--- a/notebooks/iNaturalist + ERA5_greg.ipynb
+++ b/notebooks/iNaturalist + ERA5_greg.ipynb
@@ -3479,7 +3479,28 @@
     }
    ],
    "source": [
-    "df.nearest_grid_id.unique().shape"
+    "df.nearest_grid_id.unique().shape,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "efa212bb-eb39-41ce-a2f7-9f9df2407838",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.485067754242863"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " 216515/7601"
    ]
   },
   {
@@ -3985,89 +4006,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 191,
    "id": "cf9a14b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Per-series embedding shape: torch.Size([216515, 512])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
     "\n",
-    "# 1) Load a Chronos (T5) checkpoint\n",
-    "pipe = ChronosPipeline.from_pretrained(\n",
-    "    \"amazon/chronos-t5-small\",           # try base/large for bigger models\n",
-    "    device_map=\"auto\",\n",
-    "    torch_dtype=torch.bfloat16 if torch.cuda.is_available() else torch.float32,\n",
-    ")\n",
+    "# # 1) Load a Chronos (T5) checkpoint\n",
+    "# pipe = ChronosPipeline.from_pretrained(\n",
+    "#     \"amazon/chronos-t5-small\",           # try base/large for bigger models\n",
+    "#     device_map=\"auto\",\n",
+    "#     torch_dtype=torch.bfloat16 if torch.cuda.is_available() else torch.float32,\n",
+    "# )\n",
     "\n",
-    "# 2) Example batch: variable-length univariate series\n",
-    "rng = np.random.default_rng(0)\n",
-    "# series = [\n",
-    "#     np.sin(np.linspace(0, 8*np.pi, 120)) + 0.1 * rng.standard_normal(120),\n",
-    "#     np.sin(np.linspace(0, 8*np.pi, 200)) + 0.1 * rng.standard_normal(200),\n",
-    "#     np.sin(np.linspace(0, 8*np.pi, 350)) + 0.1 * rng.standard_normal(350),\n",
-    "# ]\n",
-    "series = df_feats[['u10', 'v10', 'd2m', 't2m', 'msl', 'sp', 'tp']].values#[:1000] # crashes without enough mem\n",
-    "# Convert to a list of 1D tensors (no manual padding needed)\n",
-    "batch = [torch.tensor(x, dtype=torch.float32) for x in series]\n",
-    "lengths = [len(x) for x in batch]\n",
+    "# # 2) Example batch: variable-length univariate series\n",
+    "# rng = np.random.default_rng(0)\n",
+    "# # series = [\n",
+    "# #     np.sin(np.linspace(0, 8*np.pi, 120)) + 0.1 * rng.standard_normal(120),\n",
+    "# #     np.sin(np.linspace(0, 8*np.pi, 200)) + 0.1 * rng.standard_normal(200),\n",
+    "# #     np.sin(np.linspace(0, 8*np.pi, 350)) + 0.1 * rng.standard_normal(350),\n",
+    "# # ]\n",
+    "# series = df_feats[['u10', 'v10', 'd2m', 't2m', 'msl', 'sp', 'tp']].values#[:1000] # crashes without enough mem\n",
+    "# # Convert to a list of 1D tensors (no manual padding needed)\n",
+    "# batch = [torch.tensor(x, dtype=torch.float32) for x in series]\n",
+    "# lengths = [len(x) for x in batch]\n",
     "\n",
-    "# 3) Extract encoder embeddings for the whole batch\n",
-    "#    emb has shape (batch, seq_len, hidden) with internal padding handled for you.\n",
-    "emb, tok_state = pipe.embed(batch)\n",
+    "# # 3) Extract encoder embeddings for the whole batch\n",
+    "# #    emb has shape (batch, seq_len, hidden) with internal padding handled for you.\n",
+    "# emb, tok_state = pipe.embed(batch)\n",
     "\n",
-    "# 4) Pool to a single fixed-size vector per series (mask out padding)\n",
-    "#    We'll mean-pool over the valid (unpadded) timesteps, then L2-normalize.\n",
-    "pooled = []\n",
-    "for i, L in enumerate(lengths):\n",
-    "    vec = emb[i, :L, :].float().mean(dim=0)   # (hidden,)\n",
-    "    pooled.append(vec)\n",
+    "# # 4) Pool to a single fixed-size vector per series (mask out padding)\n",
+    "# #    We'll mean-pool over the valid (unpadded) timesteps, then L2-normalize.\n",
+    "# pooled = []\n",
+    "# for i, L in enumerate(lengths):\n",
+    "#     vec = emb[i, :L, :].float().mean(dim=0)   # (hidden,)\n",
+    "#     pooled.append(vec)\n",
     "\n",
-    "embeddings = torch.stack(pooled, dim=0)       # (batch, hidden)\n",
-    "embeddings = normalize(embeddings, p=2, dim=1)\n",
+    "# embeddings = torch.stack(pooled, dim=0)       # (batch, hidden)\n",
+    "# embeddings = normalize(embeddings, p=2, dim=1)\n",
     "\n",
-    "print(\"Per-series embedding shape:\", embeddings.shape)   # e.g., torch.Size([3, hidden])\n"
+    "# print(\"Per-series embedding shape:\", embeddings.shape)   # e.g., torch.Size([3, hidden])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 192,
    "id": "e10116b6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-8.09619904e-01, -1.95890808e+00,  2.81940674e+02, ...,\n",
-       "         1.02150875e+05,  1.01024492e+05,  7.94728621e-08],\n",
-       "       [-2.21913662e-02,  3.94895744e+00,  2.96166473e+02, ...,\n",
-       "         1.01854055e+05,  1.01844445e+05,  3.94781418e-05],\n",
-       "       [ 1.78318787e+00, -3.04957771e+00,  2.74571075e+02, ...,\n",
-       "         1.02646070e+05,  1.02111031e+05,  0.00000000e+00],\n",
-       "       ...,\n",
-       "       [ 2.64466739e+00,  1.92965317e+00,  2.79545868e+02, ...,\n",
-       "         1.01234898e+05,  1.01014773e+05,  0.00000000e+00],\n",
-       "       [ 2.49484634e+00,  1.70927560e+00,  2.78449249e+02, ...,\n",
-       "         1.01204750e+05,  1.00050102e+05,  0.00000000e+00],\n",
-       "       [ 3.85654068e+00,  9.19887543e-01,  2.78492798e+02, ...,\n",
-       "         1.00774039e+05,  9.50825234e+04,  2.93791294e-04]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "series"
+    "# series"
    ]
   },
   {
